--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       SSG_ADMIN_USERNAME: "admin"
       SSG_ADMIN_PASSWORD: "password"
       EXTRA_JAVA_ARGS: "-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n"
-      ENV.PASSWORD.pets-db-password: "temp"
+      ENV.PROPERTY.gateway.template: "docker env variable" 
       ENV.JDBC_CONNECTION.pets-db: '{
                                       "driverClass": "com.l7tech.jdbc.mysql.MySQLDriver",
                                       "jdbcUrl": "TBD",
