--- a/example/build.gradle
+++ b/example/build.gradle
@@ -5,13 +5,5 @@
  */
 
 GatewayExportConfig {
-    folderPath = '/consumer-solutions'
-}
-
-dependencies {
-    bundle project(':common-services')
-    bundle group: 'my-bundle', name: 'my-bundle', version: '1.0.00', ext: 'bundle'
-}
-
-repositories {
+    folderPath = '/example'
 }
