--- a/example/settings.gradle
+++ b/example/settings.gradle
@@ -4,9 +4,4 @@
  *  of the MIT license.  See the LICENSE file for details.
  */
 
-GatewayExportConfig {
-    folderPath = '/common'
-    exportEntities = [
-        jdbcConnections:[ "pets-db" ],
-    ]
-}
+rootProject.name = 'example'
