--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,18 +22,9 @@ services:
       SSG_ADMIN_USERNAME: "admin"
       SSG_ADMIN_PASSWORD: "password"
       EXTRA_JAVA_ARGS: "-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n"
-      ENV.PROPERTY.gateway.template: "docker env variable" 
-      ENV.JDBC_CONNECTION.pets-db: '{
-                                      "driverClass": "com.l7tech.jdbc.mysql.MySQLDriver",
-                                      "jdbcUrl": "TBD",
-                                      "user": "admin",
-                                      "passwordRef": "pets-db-password",
-                                      "minimumPoolSize": 3,
-                                      "maximumPoolSize": 15,
-                                      "properties": {
-                                        "EnableCancelTimeout": "true"
-                                      }
-                                    }'
+      ENV.PROPERTY.gateway.template: "docker env variable"
+      ENV.CONTEXT_PROPERTY.env-configuration.example: "example value"
+      ENV.PASSWORD.password: "super secret"
 secrets:
   license:
     file: ./docker/license.xml
