--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ version: '3.4'
 services:
   gateway-dev:
     hostname: localhost
-    image: caapim/gateway:9.4.00
+    image: caapim/gateway:latest
     ports:
       - "8080:8080"
       - "8443:8443"
@@ -23,7 +23,7 @@ services:
       SSG_ADMIN_PASSWORD: "password"
       EXTRA_JAVA_ARGS: "-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n"
       ENV.PROPERTY.gateway.template: "docker env variable"
-      ENV.CONTEXT_PROPERTY.env-configuration.example: "example value"
+      ENV.CONTEXT_VARIABLE_PROPERTY.env-configuration.example: "example value"
       ENV.PASSWORD.password: "super secret"
 secrets:
   license:
