--- a/example/src/main/gateway/config/env.properties
+++ b/example/src/main/gateway/config/env.properties
@@ -1,1 +1,4 @@
 gateway.template=docker env variable
+contextVariable.property.env-configuration.example=example value
+contextVariable.property.influxdb.influxdb=influxdb
+contextVariable.property.influxdb.tags=env\=design
