--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,35 @@
-# Copyright (c) 2017 CA. All rights reserved.
-# This software may be modified and distributed under the terms
-# of the MIT license.  See the LICENSE file for details.
+# Binaries for programs and plugins
+*.exe
+*.dll
+*.so
+*.dylib
+
+# Test binary, build with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
+.glide/
+
+# IntelliJ project files
+/.idea/
+/*.iml
+
+# Downloaded charts
+*.tgz
+
+# Local
+*.DS_Store
 
 # Root files to ignore
 .gradle/
-/.idea/
-/*.iml
 build/
 /out/
 .DS_Store
 .java-version
+**/gateway/config/env.properties
 
 # Ignore the license out so that it is not accidentally committed.
 /license.xml
